# fero

./: .dockerignore
fero-bastion/: Cargo.toml  Dockerfile
fero-client/: Cargo.toml
fero-client/src/: main.rs
fero-proto/: Cargo.toml  build.rs
fero-server/: Cargo.toml
fero-server/src/: service.rs  test.rs
