[package]
name = "fero-proto"
version = "0.1.0"
authors = ["Alex Crawford <alex.crawford@coreos.com>"]
workspace = ".."

[dependencies]
byteorder = "1"
chrono = "0.4"
diesel = { version = "1", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
failure = "0.1"
futures = "0.1"
grpcio = { git = "https://github.com/pingcap/grpc-rs" }
protobuf = "2.0"
sha2 = "0.7"

[build-dependencies]
grpcio-compiler = { git = "https://github.com/pingcap/grpc-rs" }
tempdir = "0.3"
protobuf = "2.0"
protobuf-codegen = "2.0"
protoc = "2.0"
